--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "@types/marked": "^5.0.2",
     "bcryptjs": "^2.4.3",
     "googleapis": "^167.0.0",
+    "gray-matter": "^4.0.3",
     "jose": "^5.10.0",
+    "marked": "^15.0.12",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +24,7 @@
     "recharts": "^3.5.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
